# dgasm

./: .gitignore  CMakeLists.txt  README.md  RELEASE.md  assembler.c  assembler.h  ast.h  config.h.in  dgasm.1  dgasm.1.in  error.c  error.h  eval.c  eval.h  lexer.l  main.c  opcode.c  opcode.h  parser.y  symbol_tbl.c  symbol_tbl.h
.github/workflows/: fuzz.yml  golden.yml  memcheck.yml
cmake/: run_error_test.cmake  run_fuzz_regression_test.cmake  run_golden_test.cmake
scripts/: fuzz_report.sh  rename_crashes.sh
tests/: hello.s
tests/fuzzregression/: crash_001.s  crash_002.s  crash_003.s  crash_004.s  crash_013.s  crash_022.s  crash_023.s  crash_024.s  crash_025.s  crash_026.s  crash_027.s  crash_028.s  crash_029.s  crash_030.s  crash_031.s  crash_032.s  crash_033.s  crash_034.s  crash_035.s  crash_036.s  crash_037.s  crash_038.s  crash_039.s  crash_040.s  crash_041.s  crash_042.s  crash_043.s  crash_044.s  crash_045.s  crash_046.s  crash_047.s  crash_048.s  crash_049.s  crash_050.s  crash_051.s  crash_052.s  crash_053.s  crash_054.s  crash_055.s  crash_056.s  (+102 more)
tests/golden/: adc.octal  adc.s  add.octal  add.s  addi.octal  addi.s  adi.octal  adi.s  anc.octal  anc.s  and.octal  and.s  andi.octal  andi.s  bto.octal  bto.s  btz.octal  btz.s  clm.octal  clm.s  cob.octal  cob.s  com.octal  com.s  constinstrs.octal  constinstrs.s  dad.octal  dad.s  dhxl.octal  dhxl.s  dhxr.octal  dhxr.s  dido.octal  dido.s  directives.octal  directives.s  dlsh.octal  dlsh.s  dsb.octal  dsb.s  (+201 more)
